--- a/src/components/CollapsiblePanel/CollapsiblePanelStyles.css
+++ b/src/components/CollapsiblePanel/CollapsiblePanelStyles.css
@@ -1,7 +1,11 @@
 [data-collapsible-panel-main]{
-    border: 1px solid #C6C6CD;
+    /* border: 1px solid #C6C6CD; */
     border-radius: 8px;
     position: relative;
+}
+[data-collapsible-panel-is-open=true],
+[data-collapsible-panel-main]:hover{
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
 }
 [data-collapsible-panel-header]{
     display: flex;
@@ -11,13 +15,14 @@
     cursor: pointer;
 }
 [data-collapsible-panel-header-content]{
-    padding: 16px 20px;
+    padding-top: 20px;
+    padding-bottom: 5px;
 }
 [data-collapsible-panel-main-content]{
-    padding: 16px 20px;
+    padding: 16px 4px;
 }
 [data-collapsible-panel-header-btn]{
-    border-left: 1px solid #C6C6CD;
+    /* border-left: 1px solid #C6C6CD; */
     padding: 10px;
 }
 [data-collapsible-panel-header-btn]{
@@ -31,6 +36,10 @@
     transform: rotate(180deg);
     transition: transform ease-in-out 0.5s;
 }
+[data-collapsible-panel-header-btn-wrapper] svg{
+    min-width: 18px;
+    min-height: 18px;
+}
 [data-collapsible-panel-is-open=false] [data-collapsible-panel-header]{
-    border-bottom: none;
+    border-bottom: 1px solid #C6C6CD;
 }
