session is handled properly

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-*{
+* {
   box-sizing: border-box;
 }
-body,html{
+body,
+html {
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -9,53 +10,51 @@ body,html{
   width: 100vw;
   overflow-y: auto;
 }
-[data-header-with-btn]{
+[data-header-with-btn] {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
   margin-top: 20px;
 }
-[data-header-with-btn] [data-font-ember-bold]{
+[data-header-with-btn] [data-font-ember-bold] {
   white-space: nowrap !important;
 }
-[data-main-chat-page-wrapper]{
+[data-main-chat-page-wrapper] {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
-[data-chat-panel]{
+[data-chat-panel] {
   flex: 1;
 }
-[data-chat-msg-panel]{
+[data-chat-msg-panel] {
   font-size: 17px;
   border-radius: 8px;
   padding: 16px 16px;
-  background-color: #F3F5F6;
+  background-color: #f3f5f6;
   min-width: 50px;
   max-width: 80%;
   display: flex;
   align-items: flex-start;
 }
-[data-adjust-height-for-user-text]{
+[data-adjust-height-for-user-text] {
   padding-top: 2px;
 }
-[data-chat-msg-incoming=true]{
+[data-chat-msg-incoming="true"] {
   display: flex;
   justify-content: flex-start;
-  
 }
-[data-chat-msg-incoming=false] svg,
-[data-chat-msg-incoming=true] svg{
+[data-chat-msg-incoming="false"] svg,
+[data-chat-msg-incoming="true"] svg {
   color: blue;
 }
-[data-chat-msg-incoming=false]{
+[data-chat-msg-incoming="false"] {
   display: flex;
   justify-content: flex-end;
 }
-[data-chat-msg-panel-text-panel]{
+[data-chat-msg-panel-text-panel] {
   padding-left: 16px;
-  
 }
 
 [data-anomaly-detected-badge] {
@@ -65,24 +64,23 @@ body,html{
   border: 1px solid #f6d0ca !important;
   font-size: 16px !important;
 }
-[data-card-panel-status=true] [data-anomaly-detected-badge] {
+[data-card-panel-status="true"] [data-anomaly-detected-badge] {
   font-size: 14px !important;
   background-color: #e9f9ef !important;
   color: #00802f !important;
   border: 1px solid #ade9c3 !important;
   font-size: 16px !important;
 }
-[data-recommend-panel-description-item]{
+[data-recommend-panel-description-item] {
   padding-bottom: 4px;
 }
 [data-recommend-panel-list-title],
-[data-recommend-panel-list-description]{
+[data-recommend-panel-list-description] {
   font-size: 16px;
 }
-[data-recommendation-title]{
+[data-recommendation-title] {
   font-size: 20px;
 }
-
 
 /* ---- card panel--- */
 
@@ -119,42 +117,72 @@ body,html{
   width: 18px;
 }
 
-[data-card-panel-title-with-info]{
+[data-card-panel-title-with-info] {
   display: flex;
   align-items: center;
 }
 
-[data-chat-panel-ai-reply-header]{
+[data-chat-panel-ai-reply-header] {
   margin-bottom: 20px;
   display: flex;
   align-items: center;
 }
-[data-chat-panel-ai-reply-text]{
+[data-chat-panel-ai-reply-text] {
   margin-left: 8px;
   font-size: 20px;
   margin-top: 2px;
 }
-[data-chat-panel-ai-reply-header] svg{
+[data-chat-panel-ai-reply-header] svg {
   color: blue;
 }
-[data-card-panel-main-text-value]{
-  color: #D91515;
+[data-card-panel-main-text-value] {
+  color: #d91515;
+  line-height: 1.1;
   /* font-size: 30px; */
 }
-[data-card-panel-status=true] [data-card-panel-main-text-value]{
+[data-card-panel-status="true"] [data-card-panel-main-text-value] {
   color: #00802f;
 }
-[data-card-panel-status-wrapper]{
+[data-card-panel-status-wrapper] {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-[data-tab-title]{
+[data-tab-title] {
   font-size: 20px;
 }
-[data-prompt-input-box]{
+[data-prompt-input-box] {
   position: sticky;
 }
-[data-id="data-chat-panel-summary"] [data-summary-panel-description-container] p{
+[data-id="data-chat-panel-summary"]
+  [data-summary-panel-description-container]
+  p {
   font-size: 17px;
 }
+[data-history-list-item]{
+  user-select: none;
+}
+[data-history-list-item-active="true"] {
+  background-color: #cce4ff;
+  border-radius: 4px;
+  font-family:
+    "Amazon-Ember-Bold", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+}
+[data-chat-remove-icon] {
+  margin-right: 6px;
+}
+[data-chat-remove-icon]:hover > span, [data-chat-remove-icon]:hover svg {
+  width: 18px !important;
+  height: 20px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
